@@ -54,19 +54,23 @@ class LintModuleTest:
         except NoFileError:
             pass
 
+        self._test_file = test_file
+        self._check_end_position = (
+            sys.version_info >= self._test_file.options["min_pyver_end_position"]
+        )
         try:
             args = [test_file.source]
         except NoFileError:
             # If we're still raising NoFileError the actual source file doesn't exist
             args = [""]
+        if config and config.getoption("minimal_messages_config"):
+            with self._open_source_file() as f:
+                messages_to_enable = {msg[1] for msg in self.get_expected_messages(f)}
+            args.extend(["--disable=all", f"--enable={','.join(messages_to_enable)}"])
         _config_initialization(
             self._linter, args_list=args, config_file=rc_file, reporter=_test_reporter
         )
-        self._test_file = test_file
         self._config = config
-        self._check_end_position = (
-            sys.version_info >= self._test_file.options["min_pyver_end_position"]
-        )
 
     def setUp(self) -> None:
         if self._should_be_skipped_due_to_version():
